# diffrend

./: .gitignore  Dockerfile_oglrenderer  README.md  model.py  np_renderer.py  setup.py  tf_renderer.py
analysis/gen_surf_pts/: generator_anim.py  surf_pts.py
analysis/splat_estimation/: disk_optimize.py
diffrend/: generate_scenes.py  model.py  render.py  splats.py
diffrend/generator/: generator.py  networks.py  parameters.py  shapenet.py
diffrend/gl/: GLRenderer.py  GLSU.py
diffrend/gl/renderer/: .gitignore  CMakeLists.txt  Makefile  README.md  glad.c  test_run.sh
diffrend/gl/renderer/offscreen_test/: Makefile
diffrend/gl/renderer/src/: SPSC_LockFreeQueue.hpp  camera.cc  camera.h  light.h  main.cc  object.cc  object.h  renderer.cc  renderer.h  scene.cc  scene.h  shader.cc  shader.h  utils.cc  utils.h
diffrend/inversegraphics_generator/: constants.py  dataset.py  obj_generator.py
diffrend/numpy/: camera.py  geometry.py  ops.py  quaternion.py  renderer.py  sph.py  vector.py
diffrend/numpy_/: ops.py  quaternion.py
diffrend/tensorflow/: ops.py  renderer.py
diffrend/torch/: LightFieldNet.py  NEstNet.py  batch_render.py  light_field_renderer_main.py  main.py  ops.py  params.py  projection_layer.py  render.py  render_surfel.py  (+5 more)
docs/: renderer.md  scene_description.md
scenes/: basic.json  basic_bunny.json  basic_cube.json  basic_halfbox.json  basic_multiobj.json  basic_quad.json  basic_sphere.json  basic_triangle_phong.json  camera_trajectory.json  halfbox_sphere_cube.json  scenenet_0.json
test/: test-sphere-distribution.py
viz/: visualizer.py
(+88 files in other folders)
